--- a/consumer-service/pom.xml
+++ b/consumer-service/pom.xml
@@ -71,6 +71,13 @@
             <version>13.0</version>
             <scope>compile</scope>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-quartz -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+            <version>2.3.7.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
