--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>producer-service</module>
         <module>gateway</module>
         <module>camunda</module>
+        <module>nacos-server</module>
     </modules>
 
     <build>
