--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>springcloud-study</name>
     <description>Demo project for Spring Boot</description>
-
+    <packaging>pom</packaging>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -25,6 +25,8 @@
         <module>gateway</module>
         <module>camunda</module>
         <module>nacos-server</module>
+        <module>mybatis-service</module>
+        <module>export-service</module>
     </modules>
 
     <build>
