--- a/nacos-service/pom.xml
+++ b/nacos-service/pom.xml
@@ -15,6 +15,22 @@
     <description>nacos-service</description>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>io.seata</groupId>
+                    <artifactId>seata-spring-boot-starter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>io.seata</groupId>
+            <artifactId>seata-spring-boot-starter</artifactId>
+            <!--            <version>1.2.0</version>-->
+            <version>1.4.2</version>
+        </dependency>
         <!--自定义aop-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -35,6 +51,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-version}</version>
             </plugin>
         </plugins>
     </build>
