--- a/openfeign-service/src/main/resources/application.yml
+++ b/openfeign-service/src/main/resources/application.yml
@@ -4,13 +4,12 @@ server:
 spring:
   application:
     name: openfegin-service
+  jackson:
+    property-naming-strategy: CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES  #驼峰转下划线
   cloud:
     nacos:
       discovery:
         server-addr: localhost:8848
-#    alibaba:
-#      seata:
-#        tx-service-group: fcp_tx_group
   datasource:
     url: jdbc:mysql:///test?useUnicode=true&autoReconnect=true&failOverReadOnly=false&characterEncoding=utf-8&useSSL=false&serverTimezone=Asia/Shanghai
     username: root
@@ -52,13 +51,14 @@ spring:
     database: 0
 
 #开启fallback熔断
-#feign:
-#  hystrix:
-#    enabled: true
+feign:
+  hystrix:
+    enabled: true
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   configuration:
+    map-underscore-to-camel-case: true
     cache-enabled: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
 
