--- a/openfeign-service/src/main/resources/application.yml
+++ b/openfeign-service/src/main/resources/application.yml
@@ -72,13 +72,13 @@ seata:
     type: nacos
     nacos:
       application: seata-server
-      serverAddr: 127.0.0.1:8848
+      serverAddr: localhost:8848
       group: SEATA_GROUP
       namespace: 2771bc44-e264-4b89-a5b8-b6702c73fcdd
   config:
     type: nacos
     nacos:
-      server-addr: 127.0.0.1:8848
+      server-addr: localhost:8848
       group: SEATA_GROUP
       namespace: 2771bc44-e264-4b89-a5b8-b6702c73fcdd
       dataId: seata.properties
