--- a/openfeign-service/src/main/resources/application.yml
+++ b/openfeign-service/src/main/resources/application.yml
@@ -49,11 +49,18 @@ spring:
         max-idle: 8
     timeout: 50000ms
     database: 0
+#设置feign客户端超时时间(OpenFeign默认支持ribbon)
+#ribbon:
+#  #指的是建立连接所用的时间，适用于网络状况正常的情况下,两端连接所用的时间
+#  ReadTimeout: 5000
+#  #指的是建立连接后从服务器读取到可用资源所用的时间
+#  ConnectTimeout: 5000
 
-#开启fallback熔断
+#开启feign对sentinel的支持
 feign:
-  hystrix:
+  sentinel:
     enabled: true
+
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
@@ -61,6 +68,8 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     cache-enabled: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  global-config:
+    banner: false
 
 seata:
   tx-service-group: test_tx_group
@@ -82,3 +91,6 @@ seata:
       group: SEATA_GROUP
       namespace: 2771bc44-e264-4b89-a5b8-b6702c73fcdd
       dataId: seata.properties
+user:
+   user-name: "123"
+   age: "25"
