--- a/rabbitmq-consume/pom.xml
+++ b/rabbitmq-consume/pom.xml
@@ -7,19 +7,26 @@
         <artifactId>springcloud-study</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
-
-    <groupId>com.copysun.eureka</groupId>
-    <artifactId>eureka-server</artifactId>
+    <groupId>com.copysun</groupId>
+    <artifactId>rabbitmq-consume</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>eureka-server</name>
-    <description>Demo project for Spring Boot</description>
-
+    <name>rabbitmq-consume</name>
+    <description>rabbitmq-consume</description>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
     </dependencies>
 
@@ -28,7 +35,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot-version}</version>
             </plugin>
         </plugins>
     </build>
