--- a/common/pom.xml
+++ b/common/pom.xml
@@ -13,6 +13,12 @@
     <name>common</name>
     <description>common</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
